# tinyexprpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile  tinyexpr.cpp  tinyexpr.h
examples/: CMakeLists.txt  tedemo.cpp
tests/: CMakeLists.txt  testingmain.cpp  tetests.cpp
